Phase 3.1: JVM instruction sequence validation - 12/12 tests passing
Implemented realistic JVM bytecode execution patterns using microcode sequences.
Each test validates complete JVM operations: load → operate → store.

Test Coverage (12 sequences, 100% passing):
==============================================================================
Category 1: Arithmetic Operations (3/3)
- IADD: iload_0; iload_1; iadd; istore_2 (10 + 3 = 13)
- ISUB: iload_0; iload_1; isub; istore_2 (10 - 3 = 7)
- IMUL: iload_0; iload_1; imul; istore_2 (10 * 3 = 30, 17-cycle multiplier)

Category 2: Logical Operations (3/3)
- IAND: iload_0; iload_1; iand; istore_2 (10 & 3 = 2)
- IOR: iload_0; iload_1; ior; istore_2 (10 | 3 = 11)
- IXOR: iload_0; iload_1; ixor; istore_2 (10 ^ 3 = 9)

Category 3: Shift Operations (3/3)
- ISHL: iload_0; iload_1; ishl; istore_2 (10 << 3 = 80)
- ISHR: iload_0; iload_1; ishr; istore_2 (10 >> 3 = 1, arithmetic)
- IUSHR: iload_0; iload_1; iushr; istore_2 (10 >>> 3 = 1, logical)

Category 4: Stack Manipulation (2/2)
- DUP_IADD: iload_0; dup; iadd; istore_1 (10 + 10 = 20)
- COMPLEX_STACK: Multi-value dup/add pattern (7 + 4 + 4 = 15)

Category 5: Load/Store Patterns (1/1)
- BIPUSH_SEQUENCE: bipush 5; istore_0; iload_0; iload_0; iadd; istore_1

Validation Achieved:
==============================================================================
✅ Multi-instruction pipeline interactions (load → operate → store)
✅ Stack management across multiple operations
✅ Register state transitions (A, B, VP, SP persistence)
✅ Complex data flow patterns (dup, multi-add sequences)
✅ Multiplier integration in realistic JVM context
✅ Immediate value loading and manipulation
✅ Local variable read/write patterns

Infrastructure:
==============================================================================
- Created jvmSequencesRom with 12 test sequences at ROM addrs 20-157
- Generated JopCoreJvmSequencesTestTb.vhd testbench
- Created test_jvm_sequences.py with 12 comprehensive tests
- Added

--- a/verification/cocotb/Makefile
+++ b/verification/cocotb/Makefile
@@ -228,6 +228,14 @@ test_core_multiplier:
 		(echo "ERROR: JopCoreMultiplierTestTb.vhd not found. Run 'cd ../../core/spinalhdl && sbt \"runMain jop.JopCoreMultiplierTestTbVhdl\"' first" && exit 1)
 	$(MAKE) VHDL_SOURCES="$(GENERATED_DIR)/JopCoreMultiplierTestTb.vhd" TOPLEVEL=jopcoremultipliertesttb MODULE=tests.test_core_multiplier
 
+# Test JopCore with JVM instruction sequences (Phase 3.1)
+test_jvm_sequences:
+	@echo "Testing JopCore JVM instruction sequences (Phase 3.1)..."
+	@mkdir -p waveforms $(GENERATED_DIR)
+	@cp -f $(SPINALHDL_GEN_DIR)/JopCoreJvmSequencesTestTb.vhd $(GENERATED_DIR)/JopCoreJvmSequencesTestTb.vhd || \
+		(echo "ERROR: JopCoreJvmSequencesTestTb.vhd not found. Run 'cd ../../core/spinalhdl && sbt \"runMain jop.JopCoreJvmSequencesTestTbVhdl\"' first" && exit 1)
+	$(MAKE) VHDL_SOURCES="$(GENERATED_DIR)/JopCoreJvmSequencesTestTb.vhd" TOPLEVEL=jopcorejvmsequencestesttb MODULE=tests.test_jvm_sequences
+
 # Help
 help:
 	@echo "JOP CocoTB Test Makefile"
